Issue 660 : Generator: Long URLs in record comments overflow in mobile Chrome, causing off-screen modal positions
This PR fixes https://github.com/datenanfragen/website/issues/660

--- a/assets/styles/generator.scss
+++ b/assets/styles/generator.scss
@@ -200,3 +200,7 @@ h2 {
 .request-transport-medium-chooser {
     margin-top: 17px;
 }
+
+#current-company-comments-colon {
+     overflow-wrap: anywhere;
+}
